--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -51,6 +51,11 @@ body, input, button{
   color: #444;
   margin-bottom: 8px;
 }
+.content form label span {
+  font-weight: normal;
+  color: #999;
+  font-size: 12px;
+}
 .content form input {
   margin-bottom: 20px;
   border: 1px solid #ddd;
